--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -21,6 +21,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="retirement-spending">
+                <span class="bi bi-wallet2" aria-hidden="true"></span> Retirement Spending
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="simple-calculator">
                 <span class="bi bi-plus-slash-minus" aria-hidden="true"></span> Simple Calculator
             </NavLink>
